@@ -22,6 +22,7 @@ Applications/Samples/Deprecated/WebAssembly/build/
 Applications/Samples/Deprecated/WebAssembly/ThirdPartyDownloads/
 Applications/Samples/Deprecated/WebAssembly/installDir/
 StoneWebViewer/Plugin/ThirdPartyDownloads/
+StoneWebViewer/Resources/package-lock.json
 StoneWebViewer/WebAssembly/ThirdPartyDownloads/
 UnitTestsSources/ThirdPartyDownloads/
 node_modules/
