@@ -80,11 +80,14 @@ $pictureSize: 6.5rem;
     line-height:15px;
     width:15px;
     height:15px;
-    border-radius: 100%;
+    border-radius: 5px;
     background-color: $gray;
     vertical-align: middle;
     text-align: center;
     font-weight: bold;
+    width: max-content;
+    padding: 1px 5px;
+    line-height: 12px;
 }
 .wvSerieslist__information{
     font-size: 14px;
