@@ -1,6 +1,7 @@
 Pending changes in the mainline
 ===============================
 
+* SeriesList: display the SeriesNumber tag in front of image count.
 * In the top right overlay, display ContentDate/ContentTime if they are 
   available in the instance.  If not, StudyDate is displayed (previous
   behavior)
